--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -5,6 +5,7 @@ interface Breadcrumb {
     label: string;
     fragment: string;
     active?: boolean;
+    linkTo?: boolean;
 }
 
 interface Props {
@@ -20,23 +21,30 @@ const breadcrumbsWithUrls = breadcrumbs.map((crumb) => {
 });
 ---
 
-<nav
-    aria-label="Breadcrumb"
-    class="font-sans text-sm font-medium text-dark-gray"
->
+<nav aria-label="Breadcrumb" class="font-sans text-sm text-dark-gray">
     <ol class="flex flex-wrap items-center align-middle">
         {
             breadcrumbsWithUrls.map((crumb) => (
                 <li class="flex items-center">
                     <ChevronRight class="size-4" />
-                    <a
-                        href={crumb.url}
-                        class:list={[
-                            crumb.active && "font-semibold text-primary",
-                        ]}
-                    >
-                        {crumb.label}
-                    </a>
+                    {crumb.linkTo === false ? (
+                        <span
+                            class:list={[
+                                crumb.active && "font-semibold text-primary",
+                            ]}
+                        >
+                            {crumb.label}
+                        </span>
+                    ) : (
+                        <a
+                            href={crumb.url}
+                            class:list={[
+                                crumb.active && "font-semibold text-primary",
+                            ]}
+                        >
+                            {crumb.label}
+                        </a>
+                    )}
                 </li>
             ))
         }
